---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/guide_type_system/11_match_non_exhaustive_fail.flx
== compile ==
failed (compile)
== diagnostics ==
Error[E015]: Non-Exhaustive Match

Match is non-exhaustive: missing Bool case(s): false.

  examples/guide_type_system/11_match_non_exhaustive_fail.flx:3:1
  |
3 | match b {
  | ^^^^^^^^^
4 |     true -> 1
  | ^^^^^^^^^^^^^
5 | };
  | ^

Hint:
  Add missing boolean arms or an unguarded `_ -> ...` catch-all.
== stdout ==
<not executed>
